[TEST] feat: Add upload data
